global styles updated

--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,7 @@ a {
   --light-blue-300: #e9ecf8;
   --light-blue-400: #aab2d5;
   --light-blue-500: #757fb2;
+  --color-copyright: #8a8484;
+  --green-100: #22c070;
+
 }
