--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -13,11 +13,52 @@
   margin-top: 30px;
 }
 
-/* .container {
+.container {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
-} */
+}
+
+.container p {
+  text-align: center;
+}
+
+.textContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  gap: 1rem;
+  color: var(--color-copyright);
+  margin-bottom: -10px;
+  font-size: 12px;
+  font-family: "Proxima Nova", -apple-system, Roboto, Arial, sans-serif;
+}
+
+.textContainer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  gap: 1rem;
+  transition: color 0.3s ease-in-out;
+}
+
+.textContainer a:hover {
+  color: var(--green-100);
+}
+
+.logo {
+  width: 25px;
+  margin-left: -18px;
+  background-color: transparent;
+  filter: grayscale(100%);
+  transition: filter 0.3s ease-in-out;
+}
+
+.logo:hover {
+  filter: none;
+}
