--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -3,10 +3,13 @@
   height: 48px;
   margin: 40px 20px 0 0;
 }
+.wrapper {
+  height: 100vh;
+}
 
 .container {
   width: 90%;
-  height: 90vh;
+  height: 83vh;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
