--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -62,3 +62,10 @@
 .logo:hover {
   filter: none;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    border-top: 1px solid var(--gray-200);
+    margin-top: 500px;
+  }
+}
