--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,10 +1,11 @@
+.wrapper {
+  height: 100vh;
+}
+
 .logo {
   width: 120px;
   height: 48px;
   margin: 40px 20px 0 0;
-}
-.wrapper {
-  height: 100vh;
 }
 
 .container {
@@ -16,7 +17,7 @@
   justify-content: space-between;
 }
 
-.maincontainer {
+.mainContainer {
   margin-top: 50px;
   width: 60%;
 }
@@ -87,8 +88,6 @@
   width: 328px;
   height: 67px;
   border-radius: 24px;
-  padding: 24px;
-  gap: 8px;
   border: 1px solid var(--dark-blue-300);
   background-color: var(--dark-blue-300);
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out,
@@ -105,7 +104,7 @@
 .firstButton:hover {
   border: 1px solid var(--dark-blue-300);
   color: black;
-  background-color: var(--gray-200);
+  background-color: transparent;
 }
 
 .secondButton {
@@ -115,7 +114,7 @@
   padding: 24px;
   gap: 8px;
   border: 1px solid var(--dark-blue-300);
-  background-color: var(--gray-200);
+  background-color: transparent;
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out,
     color 0.3s ease-in-out;
   font-weight: 400px;
@@ -129,4 +128,28 @@
   color: white;
   border: 1px solid var(--dark-blue-300);
   background-color: var(--dark-blue-300);
+}
+
+@media (max-width: 768px) {
+  /* .wrapper { */
+  .container {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mainContainer {
+    width: 100%;
+  }
+
+  .textareaContainer {
+    width: 600px;
+    /* display: none; */
+  }
+
+  /* .actionsContainer { */
+  /* .clousureContainer{ */
+  .buttonContainer {
+    width: 90vw;
+  }
 }
