--- a/src/components/Result/result.module.css
+++ b/src/components/Result/result.module.css
@@ -16,11 +16,23 @@
 
 .textContainer {
   background-color: transparent;
-  width: 336px;
+  width: 100%;
   height: 122px;
   top: 619px;
   left: 1032px;
   opacity: 0px;
+  color: #000;
+}
+
+.processedText {
+  width: 90%;
+  margin: 0 auto;
+  font-size: 32px;
+  font-weight: 400;
+  color: var(--dark-blue-400);
+  text-align: left;
+  padding: 50px;
+  background: transparent;
 }
 
 .textContainer h1 {
@@ -34,7 +46,7 @@
   margin-bottom: 20px;
 }
 
-.textContainer p {
+.advice {
   background-color: transparent;
   font-weight: 400;
   font-size: 16px;
@@ -47,8 +59,6 @@
   width: 328px;
   height: 67px;
   border-radius: 24px;
-  padding: 24px;
-  gap: 8px;
   border: 1px solid var(--dark-blue-300);
   background-color: var(--dark-blue-300);
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out,
@@ -60,12 +70,54 @@
   color: var(--light-blue-300);
   border: none;
   cursor: pointer;
-  margin-top: 117px;
-  display: none;
+  margin: 80px;
+  margin-top: 482px;
 }
 
 .copyButton:hover {
   border: 1px solid var(--dark-blue-300);
   color: black;
-  background-color: var(--gray-200);
+  background-color: transparent;
+}
+
+@media (max-width: 768px) {
+  .image {
+    display: none;
+  }
+
+  .mainContainer {
+    width: 90vw;
+    margin-top: 100px;
+  }
+
+  .textContainer {
+    height: 400px;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .processedText {
+    text-align: center;
+    line-height: 36px;
+    font-size: 24px;
+    max-width: 90%;
+    word-break: break-word;
+    overflow-wrap: break-word;
+  }
+
+  .copyButton {
+    margin: 0 auto;
+  }
+
+  .textContainer h1 {
+    margin-top: -200px;
+    font-size: 35px;
+  }
+
+  .advice {
+    font-size: 20px;
+  }
 }
