--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  background: #e7e5e5;
+  background: var(--main-background);
 }
 
 a {
@@ -10,22 +10,22 @@ a {
 }
 
 :root {
-  --dark-blue-100: #609ed4;
-  --dark-blue-200: #356ea9;
-  --dark-blue-300: #0a3871;
-  --dark-blue-400: #072b61;
-  --dark-blue-500: #052051;
   --gray-100: #ced4da;
   --gray-200: #adb5bd;
   --gray-300: #868e96;
   --gray-400: #495057;
   --gray-500: #343a40;
+  --green-100: #22c070;
   --light-blue-100: #f3f5fc;
   --light-blue-200: #eff1fa;
   --light-blue-300: #e9ecf8;
   --light-blue-400: #aab2d5;
   --light-blue-500: #757fb2;
   --color-copyright: #8a8484;
-  --green-100: #22c070;
-
+  --dark-blue-100: #609ed4;
+  --dark-blue-200: #356ea9;
+  --dark-blue-300: #0a3871;
+  --dark-blue-400: #072b61;
+  --dark-blue-500: #052051;
+  --main-background: #e7e5e5;
 }
